2010-09-18  v1.0  r344
------------------------------------------------------------------------

  * Support older Linux kernels that do not have the EPOLLRDHUP flag.

  * Add a portable implementation of the EVFILT_TIMER filter.

  * Add Solaris to the list of supported platforms.

  * Fixed the 'make rpm' target to work on CentOS 5.

  * Modified the manpage to remove unimplemented features.

2010-08-05  v0.9.3  r309
------------------------------------------------------------------------

  * Fix a typo in kevent_copyin() that caused EV_RECEIPT to set the
    data field incorrectly in some cases. 
    (Credit to Julien Blache for discovering and fixing this bug)

2010-08-05  v0.9.2  r289
------------------------------------------------------------------------

  * Fix some build failures on 32-bit platforms related to the debugging
    codepaths being enabled by default.

2010-08-04  v0.9.1  r286
------------------------------------------------------------------------

  * Prevent dumping of EVFILT_VNODE debugging information to STDOUT.

  * Fix the 'make clean' target in the testsuite.

2010-08-01  v0.9    r285
------------------------------------------------------------------------

  * Set kevent.data = 1 for passive sockets that have at least one pending
    connection.  
    (Credit to Julien Blache for finding and researching this bug)

  * Fix various compilation errors under Solaris.
    (Credit to Joakim Johansson for testing and providing patches)

  * Use the KQUEUE_DEBUG environment variable to turn on debugging output.

2010-07-21  v0.8    r264
------------------------------------------------------------------------

  * Fix a bug that prevented a knote with the EV_DISPATCH flag from
    being re-enabled after an event had been triggered. 
    (Credit to Julien Blache for finding and researching this bug)

2010-06-08  v0.7    r248
------------------------------------------------------------------------
